# OTGW-firmware

./: .gitattributes  .gitignore  .gitmodules  ACTION_CHECKLIST.md  AGENTS.md  ANALYSIS_ONLY.md  ASSESSMENT_COMPLETE.md  AUTHORS  BRANCH_COMPARISON.md  BRANCH_COMPARISON_SUMMARY.md  BROWSER_COMPATIBILITY.md  BROWSER_COMPATIBILITY_ANALYSIS.md  BROWSER_MEMORY_SCENARIOS.md  BUILD_FIX_REPORT.md  BUILD_FIX_SUMMARY.md  BUILD_VERIFICATION.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CLAIMS_VERIFICATION_REPORT.md  CLAUDE.md  CODE_REVIEW_FINAL.md  COMPARISON_INDEX.md  COMPREHENSIVE_PR_REVIEW.md  COPILOT_SUMMARY.md  CRASH_ANALYSIS.md  DEEP_ANALYSIS.md  DEV_RC4_BRANCH_REVIEW.md  DIFFERENCES_EXPLAINED.md  Debug.h  EVALUATION.md  EXECUTIVE-SUMMARY-0.10.4-BETA.md  FLASH_GUIDE.md  FLOW_ANALYSIS.md  FSexplorer.ino  GITHUB_RELEASE_v1.3.0.md  GITHUB_RELEASE_v1.4.0.md  HIGH_PRIORITY_FIXES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_COMPLETE.md  (+161 more)
.claude/: adr-kit-guide.md  backlog-cli-reference.md  discord_backlog_last_checked.txt  discord_last_checked.txt  github_last_checked.txt  settings.20260421_085354.bak  settings.json  settings.local.json  tweakers_last_checked.txt
.external-reviews/: HANDOFF-claude-review-c-codebase-303Qj.md  README.md
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  (+15 more)
.full-review-archive-20260421-085044/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  state.json
otgw-6.6/chmodule/: Makefile.am  autogen.sh  configure.ac  manager.cc  opentherm.cc  opentherm.h  probe.cc  probe.h
(+2377 files in other folders)
